--- a/webapp/channels/src/components/post_view/post_read_indicator/post_read_indicator.scss
+++ b/webapp/channels/src/components/post_view/post_read_indicator/post_read_indicator.scss
@@ -10,7 +10,7 @@
     border: none;
     border-radius: 3px;
     font-size: 10px;
-    color: rgba(var(--center-channel-color-rgb), 0.32);
+    color: #1e90ff;
     cursor: pointer;
     transition: all 0.15s ease;
     opacity: 0;
@@ -21,12 +21,12 @@
     }
 
     &:hover {
-        background: rgba(var(--center-channel-color-rgb), 0.06);
-        color: rgba(var(--center-channel-color-rgb), 0.56);
+        background: rgba(30, 144, 255, 0.08);
+        color: #0066cc;
     }
 
     .read-count {
-        font-weight: 400;
+        font-weight: 500;
         font-size: 10px;
         line-height: 1.4;
     }
@@ -43,11 +43,11 @@
 
     // Dark theme
     .theme--dark & {
-        color: rgba(255, 255, 255, 0.32);
+        color: #4da6ff;
 
         &:hover {
-            background: rgba(255, 255, 255, 0.06);
-            color: rgba(255, 255, 255, 0.56);
+            background: rgba(77, 166, 255, 0.12);
+            color: #66b3ff;
         }
     }
 }
