--- a/webapp/channels/src/components/post_view/post_read_indicator/post_read_indicator.scss
+++ b/webapp/channels/src/components/post_view/post_read_indicator/post_read_indicator.scss
@@ -31,6 +31,22 @@
         line-height: 1.4;
     }
 
+    // When in left sidebar (consecutive messages without profile pic)
+    .post__img & {
+        display: block;
+        position: absolute;
+        top: 20px;
+        left: 0;
+        right: 0;
+        margin: 0;
+        padding: 1px 4px;
+        text-align: center;
+        font-size: 9px;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     // Compact mode
     .post--compact & {
         padding: 1px 4px;
